--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,13 @@ body {
       background-color: lightblue;
       font-size: 100%;
     }
+
+.blacktea {
+      font-size: 300%;
+      background-color: lightgreen;
+      font-family: courier;
+      border: 1px dotted red;
+      text-transform: uppercase;
+      letter-spacing: 5px;
+      transition: rotate(-30)deg;
+    }
