--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
 
 .blacktea {
       font-size: 300%;
-      background-color: lightgreen;
+      background-color: purple;
       font-family: courier;
       border: 1px dotted red;
       text-transform: uppercase;
