automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
       font-size: 200%;
       background-color: purple;
       font-family: "playfair display";
-      border: 1px dotted red;
+      border: 5px dotted black;
       text-transform: uppercase;
       letter-spacing: 5px;
       transition: rotate(-30)deg;
