automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
 
 .blacktea {
       font-size: 200%;
-      background-color: ##FFFEB3;
+      background-color: #FFFEB3;
       font-family: "playfair display";
       border: 5px dotted black;
       text-transform: uppercase;
