--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* add CSS class and element and selectors here */
 body {
-      background-color: #B3FFEE;
+      background-color: #D9C6FF;
       font-size: 100%;
     }
 
