automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* add CSS class and element and selectors here */
 body {
-      background-color: #D9C6FF;
+      background-color: #C6FFDC;
       font-size: 100%;
     }
 
