automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* add CSS class and element and selectors here */
 body {
-      background-color: #C6FFDC;
+      background-color: #D5D5D5;
       font-size: 100%;
     }
 
