automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
 .blacktea {
       font-size: 200%;
       background-color: #D5D5D5;
-      font-family: "playfair display";
+      font-family: "trebuchet ms";
       border: 5px dotted black;
       text-transform: uppercase;
       letter-spacing: 25px;
