automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
 
 .blacktea {
       font-size: 200%;
-      background-color: #D5D5D5;
+      background-color: #FFF;
       font-family: "trebuchet ms";
       border:10px dotted black;
       text-transform: uppercase;
