automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -13,5 +13,5 @@ body {
       letter-spacing: 20px;
       transition: rotate(-30)deg;
       text-align: center;
-      text-shadow: 2px 2px #000;
+      text-shadow: 2px 2px #D5D5D5;
     }
