automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -14,5 +14,5 @@ body {
       letter-spacing: 20px;
       transition: rotate(-30)deg;
       text-align: center;
-      text-shadow: 5px 5px #D5D5D5;
+      text-shadow: 5px 5px #C2C4C3;
     }
