automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* add CSS class and element and selectors here */
 body {
-      background-color: #CDF7FF;
+      background-color: #D7F1FF;
       font-size: 100%;
       font-family: "Trebuchet MS";
     }
