automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,6 @@ body {
     
     h3 {
       font-size: 150%;
-      text-align: center;
+      /*text-align: center;*/
       letter-spacing:30px;
     }
