--- a/css/preset/preset.css
+++ b/css/preset/preset.css
@@ -55,7 +55,7 @@ li {
 }
 .more {
   font-size: 200%;
-  font-family: fantasy;
+  font-family: "Trebuchet MS";
   animation: animationFrames linear 300s;
   animation-iteration-count: infinite;
   text-shadow: 2px 2px 2px rgba(0,0,0,0.2);
