automatically backed up by learn

--- a/css/preset/preset.css
+++ b/css/preset/preset.css
@@ -14,7 +14,7 @@ li {
   height: 70px;
 }
 .font-style {
-  font-family: 'Lobster', cursive;
+  font-family: 'Trebuchet MS', cursive;
   font-size: 20px;
   color: blue;
   font-weight: bold;
