automatically backed up by learn

--- a/css/preset/preset.css
+++ b/css/preset/preset.css
@@ -18,7 +18,7 @@ li {
   font-size: 20px;
   color: black;
   font-weight: bold;
-  text-shadow: 10px 10px #FFF)
+  text-shadow: 10px 10px #D5D5D5)
 }
 .text-size {
   font-size: 200%;
