--- a/css/preset/preset.css
+++ b/css/preset/preset.css
@@ -18,7 +18,7 @@ li {
   font-size: 20px;
   color: black;
   font-weight: bold;
-  text-shadow: 10px 10px #000000
+  text-shadow: 5px 5px #FFF
 }
 .text-size {
   font-size: 200%;
