--- a/css/preset/preset.css
+++ b/css/preset/preset.css
@@ -23,6 +23,7 @@ li {
 .text-size {
   font-size: 200%;
   text-align: center;
+  text
 }
 .background {
   background: linear-gradient(red, yellow);
