--- a/css/preset/preset.css
+++ b/css/preset/preset.css
@@ -32,6 +32,7 @@ li {
   color: white;
   font-family: "Trebuchet MS";
   text-transform: uppercase;
+  text-align: center;
 }
 .borders {
   border: 3px dashed black;
