--- a/css/preset/preset.css
+++ b/css/preset/preset.css
@@ -33,6 +33,7 @@ li {
   font-family: "Trebuchet MS";
   text-transform: uppercase;
   letter-spacing: 26px;
+  font-weight: bold;
 }
 .borders {
   border: 3px dashed black;
