automatically backed up by learn

--- a/css/preset/preset.css
+++ b/css/preset/preset.css
@@ -33,7 +33,7 @@ li {
   font-family: "Trebuchet MS";
   text-transform: uppercase;
   letter-spacing: 25px;
-  font-weight: bold;
+  font-weight: italic;
 }
 .borders {
   border: 3px dashed black;
