--- a/css/preset/preset.css
+++ b/css/preset/preset.css
@@ -33,7 +33,7 @@ li {
   font-family: "Trebuchet MS";
   text-transform: uppercase;
   letter-spacing: 25px;
-  font-weight: lighter;
+  font-weight: 100;
 }
 .borders {
   border: 3px dashed black;
