--- a/css/preset/preset.css
+++ b/css/preset/preset.css
@@ -54,7 +54,7 @@ li {
 .margins {
   margin: 15px 0 0 15px;
   padding: 5px;
-  background: lightgrey;
+  background: black;
   box-shadow: 15px 15px 5px white;
 }
 .rounding-edges {
