automatically backed up by learn

--- a/css/preset/preset.css
+++ b/css/preset/preset.css
@@ -56,6 +56,7 @@ li {
   padding: 5px;
   background: black;
   box-shadow: 15px 15px 5px white;
+  color: white;
 }
 .rounding-edges {
   border-radius: 10px;
