automatically backed up by learn

--- a/css/preset/preset.css
+++ b/css/preset/preset.css
@@ -57,6 +57,7 @@ li {
   background: black;
   box-shadow: 15px 15px 5px white;
   color: white;
+  font-family: "Trebuchet MS";
 }
 .rounding-edges {
   border-radius: 10px;
