automatically backed up by learn

--- a/css/preset/preset.css
+++ b/css/preset/preset.css
@@ -58,6 +58,7 @@ li {
   box-shadow: 15px 15px 5px white;
   color: white;
   font-family: "Trebuchet MS";
+  text-transform: uppercase;
 }
 .rounding-edges {
   border-radius: 10px;
