automatically backed up by learn

--- a/css/preset/preset.css
+++ b/css/preset/preset.css
@@ -59,6 +59,7 @@ li {
   color: white;
   font-family: "Trebuchet MS";
   text-transform: uppercase;
+  letter-spacing: 30px;
 }
 .rounding-edges {
   border-radius: 10px;
