--- a/css/preset/preset.css
+++ b/css/preset/preset.css
@@ -60,6 +60,7 @@ li {
   font-family: "Trebuchet MS";
   text-transform: uppercase;
   letter-spacing:40px;
+  texxt-align:center;
 }
 .rounding-edges {
   border-radius: 10px;
