--- a/css/preset/preset.css
+++ b/css/preset/preset.css
@@ -75,7 +75,7 @@ li {
   text-shadow: 2px 2px 2px rgba(0,0,0,0.2);
   line-height: 70px;
   text-align: center;
-  color: black;
+  color: white;
 }
 
 @keyframes animationFrames{
