--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* add CSS class and element and selectors here */
 body {
-      background: linear-gradient(#A3CEFF, #FFF);
+      background: linear-gradient(#C3C4C2, #FFF);
       font-size: 100%;
       font-family: "Trebuchet MS";
     }
