--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body {
       background: linear-gradient(#BFDDFF, #FFF);
       font-size: 100%;
       font-family: "Trebuchet MS";
+      text-transform: uppercase;
     }
 
 .blacktea {
