--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ body {
       font-size: 100%;
       font-family: "Trebuchet MS";
       text-transform: uppercase;
+      text-align: center;
     }
 
 .blacktea {
